Bug 65239 - Fix warning on narrowing conversion from int to DWORD
Summary: Fix warning on narrowing conversion from int to DWORD
Status: RESOLVED FIXED
Alias: None
Product: poppler
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: poppler-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-01 11:00 UTC by Hib Eris
Modified: 2013-06-01 12:01 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Fix warning on narrowing conversion from int to DWORD (972 bytes, patch)
2013-06-01 11:00 UTC, Hib Eris
Details | Splinter Review

Description Hib Eris 2013-06-01 11:00:07 UTC
Fixes warning when compiling for Windows:

gfile.cc: In member function 'Goffset GooFile::size() const':
gfile.cc:609:30: warning: narrowing conversion of '-1' from 'int' to 'DWORD {aka long unsigned int}' inside { } is ill-formed in C++11 [-Wnarrowing]
LARGE_INTEGER size = {-1,-1};
Comment 1 Hib Eris 2013-06-01 11:00:22 UTC
Created attachment 80127 [details] [review]
Fix warning on narrowing conversion from int to DWORD
Comment 2 Albert Astals Cid 2013-06-01 12:01:45 UTC
Commited.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.