Fix warning on narrowing conversion from int to DWORD

Fixes warning when compiling for Windows:

gfile.cc: In member function 'Goffset GooFile::size() const':
gfile.cc:609:30: warning: narrowing conversion of '-1' from 'int' to 'DWORD {aka long unsigned int}' inside { } is ill-formed in C++11 [-Wnarrowing]
LARGE_INTEGER size = {-1,-1};

https://bugs.freedesktop.org/show_bug.cgi?id=65239